# Changelog

## Version  3.1.0

* Adding support for movie title
* Adding settings for disable update check on startup and limited audio conversions
* Changing no longer need to restart for setting page changes
* Fixing output name is not regenerated on encoder switch if matching extension

## Version  3.0.1

* Fixing missing import when installing from pip (linux only release)

## Version  3.0.0

* Adding AVC support (libx264)
* Adding #65 rav1e support (librav1e)
* Adding #49 SVT AV1 support (libsvtav1) directly with FFmpeg
* Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
* Adding #67 Status Panel to view encoding logs
* Adding #58 Support for cover attachments (thanks to -L0Lock-)
* Adding various speed improvements
* Adding changelog in GUI
* Adding #68 version upgrade dialogue
* Adding icons to encoders drop down
* Adding video filename path
* Adding Windows installer
* Adding check for new ffmpeg on startup
* Adding #69 nice feature for language selection (thanks to HannesJo0139)
* Adding #13 button to copy commands to clipboard and save to file
* Adding options to remove metadata and copy chapters
* Changing #8 logs to be separated into GUI and conversion logs
* Changing major internal re-write to keep encoding even if GUI dies
* Changing bitrate suggestion resolutions to be more readable with fps
* Changing command builders to specify the temporary files themselves
* Changing changelog to proper markdown
* Changing rotation and flip section to drop downs
* Fixing Windows taskbar does not always show icon
* Fixing #55 GUI logs by splitting them from core logs
* Fixing #42 log output from FFmpeg stopped due to PIPE filling up (thanks to Trevbams)
* Fixing that mkv cover attachments would show as video tracks
* Fixing plugins should not be available if no FFmpeg library for them
* Fixing error on audio tracks listing zero channels
* Removing support for the direct SVT AV1 encoder (fixes #24)